[10.25] -Add MutivectorRetriever -Add source of document for each retirval

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
-streamlit
-python-dotenv
+faiss-cpu
+fastapi
 langchain
+langchain-classic
+langchain-community
 langchain-core
 langchain-openai
-langchain-community
 langchain-text-splitters
+langsmith
+numpy<2
 openai
 PyPDF2
-faiss-cpu
+python-dotenv
+python-multipart
 sentence-transformers
-numpy<2
+streamlit
+uvicorn[standard]
